@@ -174,6 +174,9 @@ bundles.error.title=Error while executing bundle operation!
 configMgr.pluginTitle=Configuration
 config.status.ok=Configuration Admin Service is running.
 config.status.missing=Configuration Admin Service is not installed/running.
+config.metatype.ok=Metatype Service is available.
+config.metatype.missing=Metatype service is missing.
+config.noconfigs=No configurations available.
 config.properties=Properties
 config.properties.enter=Enter Name-Value pairs of configuration properties
 config.info.title=Configuration Information
